Navbar collapse bug fixed Collapse behaviour now dependent on viewport size, so functions correctly in browser version

--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,7 @@ section h4 {
 
 .phone-number {
   color: rgb(0, 41, 0);
+  border-bottom: 1px dotted black;
 }
 
 .phone-number:hover {
